添加管理员接口
